Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-95716

qlistview select box residual thin line

XMLWordPrintable

    • Linux/X11
    • 77bdce84965662a67162d1272245b168c96875db (qt/qtbase/dev) 43f96f7fba575351c90534ad8d66e9485ca382aa (qt/qtbase/6.2)

      Problem phenomenon:

      When drawing the selection box, some thin lines remain

       

      Steps to reproduce:

      Use Fusion style .

      Run the example program interview. Use the mouse to draw a selection box in the blank area and make the selection box flip. Such as the practice of GIF in the attachment.

       

      reason:

      The problem is here:

      https://github.com/qt/qtbase/blob/dev/src/widgets/styles/qfusionstyle.cpp#L1094

      rect.adjusted(1, 1, -2, -2) 

      makes the rectangle smaller, but when rect.x1-rect.x2 = 0. Then x1 + 1, x2-2 leads to x1> x2. This will make the rectangle flip in advance.

      So there is a difference between the updated area and the drawn area.

       

      The rectangle has been drawn at the position of L1090. The drawing of 1094 makes the color darker and adds a one-pixel white border. However, it is difficult to distinguish with the eyes because of transparency, so I think the code of 1094 is redundant.

       

       

        1. QTBUG-95716.gif
          1015 kB
          haixiang tang
        2. image-2021-08-11-03-42-09-444.png
          49 kB
          haixiang tang
        For Gerrit Dashboard: QTBUG-95716
        # Subject Branch Project Status CR V

            hurlevent Oliver Eftevaag
            tanghaixiang haixiang tang
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes